[package]
authors = ["Jacob Smith <jacob101607@yahoo.com>"]
description = "Implementation of tokio_core::io::Io for stdin/stdout streams\n"
homepage = "https://github.com/smith61/tokio-stdio"
license = "MIT"
name = "tokio-stdio"
readme = "README.md"
repository = "https://github.com/smith61/tokio-stdio"
version = "0.1.0"

[dependencies]
bytes = "0.4"
futures = "0.1"
log = "0.3"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

[dependencies.futures_rb]
git = "https://github.com/smith61/futures_rb"
